Added approach and experimental evaluation sections

--- a/covid19.ipynb
+++ b/covid19.ipynb
@@ -6,37 +6,38 @@
    "source": [
     "# COVID-19 - analysis and prediction  \n",
     "\n",
-    "\n",
-    "### Table of Contents:  \n",
-    "1. [Introduction](#Introduction)\n",
-    "2. [Checking the data](#Checking-the-data)\n",
-    "3. [Testing the data](#Testing-data)\n",
-    "4. [SVM](#SVM)\n",
-    "    - [Confirmed cases](#Confirmed-cases-SVM)\n",
-    "    - [Confirmed deaths](#Confirmed-deaths-SVM)\n",
-    "    - [Confirmed recoveries](#Confirmed-recoveries-SVM)\n",
-    "5. [Neural Network](#Neural-Network)\n",
-    "    - [Confirmed cases](#Confirmed-Cases-NN)\n",
-    "    - [Confirmed deaths](#Confirmed-deaths-NN)\n",
-    "    - [Confirmed recoveries](#Confirmed-recoveries-NN)\n",
-    "    - [Confirmed cases in Portugal](#Confirmed-Cases-Portugal-NN)\n",
-    "6. [Decision Tree](#Decision-Tree)\n",
-    "    - [Confirmed cases](#Confirmed-Cases-DT)\n",
-    "    - [Confirmed deaths](#Confirmed-deaths-DT)\n",
-    "    - [Confirmed recoveries](#Confirmed-recoveries-DT)\n",
-    "7. [Conclusion](#Conclusion)\n",
-    "\n",
     "**Authors: (Theme 4A)**    \n",
     "Carlos Duarte - up201708804  \n",
     "Simão Oliveira - up201603173  \n",
-    "Tiago Verdade - up201704003"
+    "Tiago Verdade - up201704003\n",
+    "\n",
+    "## Table of Contents:  \n",
+    "1. [Introduction](#Introduction)\n",
+    "2. [Checking the data](#Checking-the-data)\n",
+    "3. [Testing the data](#Testing-data)\n",
+    "4. [Approach](#Approach)\n",
+    "5. [Experimental evaluation](#Experimental-evaluation)\n",
+    "    - [SVM](#SVM)\n",
+    "        - [Confirmed cases](#Confirmed-cases-SVM)\n",
+    "        - [Confirmed deaths](#Confirmed-deaths-SVM)\n",
+    "        - [Confirmed recoveries](#Confirmed-recoveries-SVM)\n",
+    "    - [Neural Network](#Neural-Network)\n",
+    "        - [Confirmed cases](#Confirmed-Cases-NN)\n",
+    "        - [Confirmed deaths](#Confirmed-deaths-NN)\n",
+    "        - [Confirmed recoveries](#Confirmed-recoveries-NN)\n",
+    "        - [Confirmed cases in Portugal](#Confirmed-Cases-Portugal-NN)\n",
+    "    - [Decision Tree](#Decision-Tree)\n",
+    "        - [Confirmed cases](#Confirmed-Cases-DT)\n",
+    "        - [Confirmed deaths](#Confirmed-deaths-DT)\n",
+    "        - [Confirmed recoveries](#Confirmed-recoveries-DT)\n",
+    "5. [Conclusion](#Conclusion)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Introduction\n",
+    "## Introduction\n",
     "For this project we have the objective of learning how to predict values using different algorithms and tools.  \n",
     "To archieve this goal we will be predicting how covid-19 develops in terms of cases, deaths and recoveries in the world as well as cases in Portugal.  \n",
     "During our work we used SVM, Neural Network and Decision Tree algorithms."
@@ -46,7 +47,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Checking the data\n",
+    "## Checking the data\n",
     "First, it is required to analyse our dataset so that it is sure to not have any problems. To do so, we will print the first entries of the dataset:"
    ]
   },
@@ -684,9 +685,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "\n",
-    "# SVM"
+    "-----\n",
+    "## Approach\n",
+    "After gathering and taking care of the data, we'll now apply 3 different algorithms - SVM, Neural Networks and Decision Trees - to make predictions. \n",
+    "We'll be predicting confirmed cases, deaths and recoveries. We'll also test the models for overfitting, divide the data into several sets and comparing the results along the way."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "------\n",
+    "## Experimental evaluation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### SVM"
    ]
   },
   {
@@ -751,7 +768,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Confirmed cases SVM"
+    "#### Confirmed cases SVM"
    ]
   },
   {
@@ -784,7 +801,7 @@
    "metadata": {},
    "source": [
     "From this graph we can see that the growth in numbers follows a polynomial function, so we are using a polynomial kernel in SVM.\n",
-    "### Testing model for overfiting"
+    "#### Testing model for overfiting"
    ]
   },
   {
@@ -837,7 +854,7 @@
    "source": [
     "It's obvious our model performs differently depending on the subset of data it's trained on. We can confirmed there is **overfitting** happening.  \n",
     "\n",
-    "### Testing for overfiting with K Folds"
+    "#### Testing for overfiting with K Folds"
    ]
   },
   {
@@ -1020,7 +1037,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Model statistics"
+    "#### Model statistics"
    ]
   },
   {
@@ -1054,7 +1071,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Confirmed deaths SVM"
+    "#### Confirmed deaths SVM"
    ]
   },
   {
@@ -1087,7 +1104,7 @@
    "metadata": {},
    "source": [
     "From this graph we can see that the growth in numbers follows a polynomial function, so we are using a polynomial kernel in SVM.\n",
-    "### Testing model for overfiting"
+    "#### Testing model for overfiting"
    ]
   },
   {
@@ -1136,7 +1153,7 @@
    "source": [
     "It's obvious our model performs differently depending on the subset of data it's trained on. We can confirmed there is **overfitting** happening.  \n",
     "\n",
-    "### Testing for overfiting with K Folds"
+    "#### Testing for overfiting with K Folds"
    ]
   },
   {
@@ -1312,7 +1329,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Model statistics"
+    "#### Model statistics"
    ]
   },
   {
@@ -1346,7 +1363,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Confirmed recoveries SVM"
+    "#### Confirmed recoveries SVM"
    ]
   },
   {
@@ -1379,7 +1396,7 @@
    "metadata": {},
    "source": [
     "From this graph we can see that the growth in numbers follows a polynomial function, so we are using a polynomial kernel in SVM.\n",
-    "### Testing model for overfiting"
+    "#### Testing model for overfiting"
    ]
   },
   {
@@ -1429,7 +1446,7 @@
    "source": [
     "It's obvious our model performs differently depending on the subset of data it's trained on. We can confirmed there is **overfitting** happening.  \n",
     "\n",
-    "### Testing for overfiting with K Folds"
+    "#### Testing for overfiting with K Folds"
    ]
   },
   {
@@ -1602,7 +1619,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Model statistics"
+    "#### Model statistics"
    ]
   },
   {
@@ -1636,7 +1653,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Neural Network"
+    "### Neural Network"
    ]
   },
   {
@@ -1715,7 +1732,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Confirmed Cases NN"
+    "#### Confirmed Cases"
    ]
   },
   {
@@ -1823,7 +1840,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Using the 15 previous days to forecast"
+    "#### Using the 15 previous days to forecast"
    ]
   },
   {
@@ -4085,7 +4102,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Confirmed deaths NN"
+    "#### Confirmed deaths NN"
    ]
   },
   {
@@ -4193,7 +4210,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Using the 15 previous days to forecast"
+    "#### Using the 15 previous days to forecast"
    ]
   },
   {
@@ -6453,7 +6470,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Confirmed recoveries NN"
+    "#### Confirmed recoveries"
    ]
   },
   {
@@ -6561,7 +6578,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Using the 15 previous days to forecast"
+    "#### Using the 15 previous days to forecast"
    ]
   },
   {
@@ -8829,7 +8846,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Confirmed Cases Portugal NN"
+    "#### Confirmed Cases Portugal"
    ]
   },
   {
@@ -8937,7 +8954,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Using the 15 previous days to forecast"
+    "#### Using the 15 previous days to forecast"
    ]
   },
   {
@@ -11194,7 +11211,7 @@
    "source": [
     "---\n",
     "\n",
-    "# Decision Tree\n",
+    "### Decision Tree\n",
     "\n",
     "Although we cannot extrapolate values with the Decision Tree algorithm we still decided to implement it.  \n",
     "This algorithm builds a tree where each node a decision is made, until a final decision is made at the leaf node. With this in mind, when we asked to predict how the next day, the next 15 days of the pandemic would be with this model, it was obvious it wouldn't work. The tree simply didn't have the necessary knowledge to predict that, it had no previous experience of how a day 100 would be in a covid19 pandemic.  \n",
@@ -11264,7 +11281,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Confirmed Cases DT"
+    "#### Confirmed Cases"
    ]
   },
   {
@@ -11317,7 +11334,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Confirmed deaths DT"
+    "#### Confirmed deaths DT"
    ]
   },
   {
@@ -11361,7 +11378,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Confirmed recoveries DT"
+    "#### Confirmed recoveries DT"
    ]
   },
   {
@@ -11405,18 +11422,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Conclusion\n",
+    "## Conclusion\n",
     "\n",
     "This project allowed us to have a deeper understanding of certain algorithms, like SVM, Neural Networks and Decision Trees. Dealing with various algorithms was an eye opening experience as it showed us that some algorithms are not intended to be used in some scenarios, while others are, and perform much better.  \n",
     "In conclusion, this project helped us translate the knowledge gained in the theoretical classes into practice.  \n",
-    "Working with a very recent subject was also a good change of pace compared past projects mainly based on games."
+    "Working with a very recent subject was also a good change of pace compared to past projects mainly based on games."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# References\n",
+    "## References\n",
     "\n",
     "- https://machinelearningmastery.com/  \n",
     "- https://en.wikipedia.org/wiki/Cross-validation_(statistics)#/media/File:K-fold_cross_validation_EN.svg\n",
